--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
     "minimatch": "^3.1.2",
+    "mongoose": "^8.1.3",
     "ms": "^2.0.0",
     "negotiator": "^0.6.3",
     "nodemon": "^3.0.3",
@@ -100,10 +101,9 @@
     "vary": "^1.1.2",
     "yallist": "^4.0.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC"
