--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "minimatch": "^3.1.2",
     "mongoose": "^8.1.3",
     "ms": "^2.0.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.2",
     "negotiator": "^0.6.3",
     "nodemon": "^3.0.3",
     "nopt": "^1.0.10",
