--- a/config/config.env
+++ b/config/config.env
@@ -1,6 +1,6 @@
 PORT = 5000
 NODE_ENV = development
-MONGO_URI = mongodb+srv://aoihosioka:oon11082005@vacqcluster.rtznl8v.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://MongoDBOpen:MongoDBOpen123@restautantreserve.sqbjwge.mongodb.net/RestautantReserve?retryWrites=true&w=majority&appName=RestautantReserve
 JWT_SECRET=asdsd;;sd
 JWT_EXPIRE=30d
 JWT_COOKIE_EXPIRE=30
