--- a/config/config.env
+++ b/config/config.env
@@ -4,3 +4,4 @@ MONGO_URI = mongodb+srv://MongoDBOpen:MongoDBOpen123@restautantreserve.sqbjwge.m
 JWT_SECRET=asdsd;;sd
 JWT_EXPIRE=30d
 JWT_COOKIE_EXPIRE=30
+็HOST=http://localhost
