vercel.json added

--- a/config/config.env
+++ b/config/config.env
@@ -4,4 +4,5 @@ MONGO_URI = mongodb+srv://MongoDBOpen:MongoDBOpen123@restautantreserve.sqbjwge.m
 JWT_SECRET=asdsd;;sd
 JWT_EXPIRE=30d
 JWT_COOKIE_EXPIRE=30
+AUTH_EMAIL=manpeakzaa@gmail.com
 ็HOST=http://localhost
